--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <main>
 <section id="characters">
-	<h1>Characters:</h1>
+	<h2>Characters:</h2>
 	<ul id="characters-list">
 	
 	</ul>
 </section>
 
 <section id="items">
-	<h1>Items:</h1>
+	<h2>Items:</h2>
 	<ul id="items-list">
 
 	</ul>
@@ -32,7 +32,7 @@
 	function write_characters_list (data){
 		let list = "";
 		for(let i=0; i<data.length; i++) {
-			list += "<li>"+data[i].name+"</li>";
+			list += "<li><a href=\"/characters/"+data[i]._id+"\">"+data[i].name+"</a></li>";
 		}
 		document.getElementById("characters-list").innerHTML = list;
 	}
