--- a/index.html
+++ b/index.html
@@ -1,79 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
+
 <html>
+	<head> 
+		<title>TFFHD</title> 
+	</head>
+	<body>
+		<h1>Too Fast Family HD: The Web App</h1>
+	<main>
+		<section id="characters">
+			<ul id="characters-list">
+			<h2>Characters:</h2>
 
-<head>
-	<title>mongodb</title>
+			</ul>
+		</section>
+		<section id="items">
+			<ul id="items-list">
+			<h2>Items:</h2>
 
-</head>
+			</ul>
+		</section>
+		
+	</main>
 
-<body>
-
-<header>
-	<h1>Too Fast Family HD: The Web App</h1>
-</header>
-
-<main>
-<section id="characters">
-	<h2>Characters:</h2>
-	<ul id="characters-list">
-	
-	</ul>
-</section>
-
-<section id="items">
-	<h2>Items:</h2>
-	<ul id="items-list">
-
-	</ul>
-</section>
-
-</main>
-<script>
-	function write_characters_list (data){
-		let list = "";
-		for(let i=0; i<data.length; i++) {
-			list += "<li><a href=\"/characters/"+data[i]._id+"\">"+data[i].name+"</a></li>";
+	<script>
+		let list;
+			
+		function fetchCharacters(){
+			fetch("/characters")
+			.then(response => response.json())
+			.then(data => charactersLoad(data));
 		}
-		document.getElementById("characters-list").innerHTML = list;
-	}
+		function charactersLoad(data) {
+			list = "<h2>Characters</h2>";
+			for(let i=0; i<data.length; i++) {
+				list += "<li><a href=\"/characters/"+data[i]._id+"\">"+data[i].name+"</a></li>";
+			}
+			document.getElementById("characters-list").innerHTML = list;
+		}
+		
+		let characters_interval= setInterval(function() {
+			fetchCharacters();
+		}, 2000);
+		fetchCharacters();
+			function fetchItems(){
+			fetch("/items")
+			.then(response => response.json())
+			.then(data => itemsLoad(data));
+		}
+		function itemsLoad(data) {
+			list = "<h2>Items</h2>";
+			for(let i=0; i<data.length; i++) {
+				list += "<li><a href=\"/items/"+data[i]._id+"\">"+data[i].name+"</a></li>";
+			}
+			document.getElementById("items-list").innerHTML = list;
+		}
+		
+		let items_interval= setInterval(function() {
+			fetchItems();
+		}, 2000);
 
-	let characters_interval= setInterval(function() {
-		fetch("/characters")
-		.then(response => response.json())
-		.then(data => write_characters_list(data));
-	}());
+		fetchItems();
 
-	characters_interval= setInterval(function() {
-		fetch("/characters")
-		.then(response => response.json())
-		.then(data => write_characters_list(data));
-	}, 2000);
-
-
-	function write_items_list (data){
-    	let list = "";
- 
-        for (let i = 0; i < data.length; i++){
-        	list += "<li>"+data[i].name + "</li>";
-       	}
-		document.getElementById("items-list").innerHTML = list;
-    }
-
-	let items_interval= setInterval(function() {
-		fetch("/items")
-		.then(response => response.json())
-		.then(data => write_items_list(data));
-	}());
-
-	items_interval= setInterval(function() {
-		fetch("/items")
-		.then(response => response.json())
-		.then(data => write_items_list(data));
-	}, 2000);
-
-
-</script>
-
-</body>
-
+	</script>
+	</body>
 </html>
