--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 		function charactersLoad(data) {
 			list = "<h2>Characters</h2>";
 			for(let i=0; i<data.length; i++) {
-				list += "<li><a href=\"/characters/"+data[i]._id+"\">"+data[i].name+"</a></li>";
+				list += '<li><a href="/characters/'+data[i]._id+'">'+data[i].name+'</a>';
+				list += '<a href="/remove/'+data[i].id_character+'">X</a></li>';
 			}
 			document.getElementById("characters-list").innerHTML = list;
 		}
