--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 		function itemsLoad(data) {
 			list = "<h2>Items</h2>";
 			for(let i=0; i<data.length; i++) {
-				list += "<li><a href=\"/items/"+data[i]._id+"\">"+data[i].name+"</a></li>";
+				list += '<li><a href="/items/'+data[i]._id+'">'+data[i].name+'</a>';
+				list += '<a href="/delete/'+data[i].id_item+'">X</a></li>';
 			}
 			document.getElementById("items-list").innerHTML = list;
 		}
